--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,73 @@ body {
   background: linear-gradient(to right, #f0c27b, #4b1248); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+/* Se modifica estilo global */
+body, html {
+  height: 90%;
+  margin: 0;
+  padding: 0;
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Se añade contenedor "wrapper"*/
+.wrapper {
+  margin: 0;
+  padding: 0;
+  max-width: 30%;
+  margin: 4rem auto;
+  padding: 2rem;
+  background: rgba(0, 0, 0, 0.579);
+  border-radius: 20px;
+}
+
+/* Se estilizan encabezados*/
+.wrapper h1, h2 {
+  padding: 10px;
+  display: block;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(255, 249, 225);
+  align-items: center;
+  text-align: center;
+}
+
+/* Se refinan estilos */
 .formulario {
   padding: 20px;
   display: flex;
   flex-direction: column;
   width: 400px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
 }
 
+/* Se refinan estilos de formulario */
 .formulario input, select {
   border: none;
-  height: 20px;
+  padding: 4px;
+  margin: 5px;
+  height: 30px;
   border-radius: 5px;
+  background-color: #f1d8b246;
+  color: #fffaf3;
+}
+
+/* Se añaden estilos al botón*/
+.formulario input[type="submit"],option {
+  background-color: #240622;
+  color: white;
+  cursor: pointer;
+  transition: all 0.1s ease;
+  border-radius: 5px;
+}
+
+/* Se añade animación en hover */
+.formulario input[type="submit"]:hover {
+  font-style: italic;
+  border: 2px solid;
+  border-radius: 5px;
+  border-image: linear-gradient(45deg, #4b1248,#f0c27b) 1;
 }
 
 .error {
